K: Add autocomplete for search form in navbar. Fix invisible drag and drop caused by CSS hidden overflow.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,10 @@
+/*
+ *= require easy-autocomplete
+ *= require easy-autocomplete.themes
+ *= require_tree
+ *= require_self
+ */
+
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 
@@ -17,7 +24,7 @@ html,body
   width: 100% !important;
   height: 100% !important;
   margin: 0px !important;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .home {
@@ -234,18 +241,6 @@ footer {
 .user_courses {
   .sort .dropdown {
     float: right;
-  }
-}
-
-/* users index */
-
-.users {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
   }
 }
 
